refac: code cleanup, moving types to their own files and exception handler
