# BACK/src/controllers/loginController.ts
@@ -1,15 +1,10 @@
-import { Route, Post } from "tsoa";
+import { Route, Post, Response, Body } from 'tsoa';
 import dotenv from 'dotenv';
 import jwt from 'jsonwebtoken';
 
-import {LoginRequest, LoginInvalido} from "../model";
+import { LoginRequest, LoginInvalido, LoginResponse, ErrorResponse } from "../model";
 
 dotenv.config();
-
-export type LoginResponse = {
-    token: string,
-    expiresIn: string
-}
 
 const LOGIN = process.env.DEFAULT_LOGIN
 const SENHA = process.env.DEFAULT_SENHA
@@ -18,9 +13,10 @@ const TOKEN_TEMPO = process.env.TOKEN_TEMPO || '30000'
 const SECRET = process.env.JWT_SECRET
 
 @Route("login")
-export default class LoginController {
-    @Post("/post")
-    public async login(loginReq: LoginRequest): Promise<LoginResponse> {
+export class LoginController {
+    @Post()
+    @Response<ErrorResponse>(403, 'Forbidden')
+    public async login(@Body() loginReq: LoginRequest): Promise<LoginResponse> {
         if(loginReq.login == LOGIN && loginReq.senha == SENHA) {
             const token = jwt.sign(loginReq, SECRET!, { expiresIn: TOKEN_TEMPO });
             const expiresIn = new Date(Date.now() + Number(TOKEN_TEMPO))
@@ -34,3 +30,5 @@ export default class LoginController {
         }
     }
 }
+
+export default LoginController
