# BACK/src/model/cardRequest.ts
@@ -1,0 +1,7 @@
+export type CardRequest = {
+    titulo: string,
+    conteudo: string,
+    lista: string
+}
+
+export default CardRequest;
