# BACK/src/model/cardResponse.ts
@@ -1,0 +1,8 @@
+export type CardResponse = {
+    id: string,
+    titulo: string,
+    conteudo: string,
+    lista: string
+}
+
+export default CardResponse;
