# BACK/src/model/index.ts
@@ -2,3 +2,6 @@ export * from './loginRequest';
 export * from './errorResponse';
 export * from './exceptions';
 export * from './entities';
+export * from './loginResponse'
+export * from './cardRequest'
+export * from './cardResponse'
