# BACK/src/model/loginResponse.ts
@@ -1,0 +1,6 @@
+export type LoginResponse = {
+    token: String,
+    expiresIn: String
+}
+
+export default LoginResponse
